@@ -110,6 +110,7 @@ Version 1.13.0-dev:
    * Fix bug #21916: ready blocked at inappropriate times
    * Fix bug #21931: controllers bugged in (basic campaign) when networked
    * Fix bug #21883: make sure movement animations don't cycle with fog on
+   * Fix bug #21316: make subframes within standing animations cycle by default
 
 Version 1.11.11:
  * Add-ons server:
